--- a/components/zqqeunt4a-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/zqqeunt4a-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zqqeunt4a-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-26598997ea.6kgv.p3.openshiftapps.com/rhtap/rhtap-qe-nodejs:092cb5e7b27f9bb295a59b8b53e44835b6b5c0b6@sha256:8cc120bea16d02defa27abcdca919e69e53f524316174a930736df2284325a25
+          name: container-image
